--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -38,10 +38,11 @@
         android:id="@+id/textDiagnostic"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginStart="188dp"
+        android:layout_marginBottom="164dp"
         android:padding="16dp"
         android:text=""
-        android:visibility="gone"
-        tools:layout_editor_absoluteX="189dp"
-        tools:layout_editor_absoluteY="507dp" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
