--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -45,19 +45,51 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
-    <!-- Custom ProgressBar for flex percentage -->
-    <ProgressBar
-        android:id="@+id/progressBar"
-        style="?android:attr/progressBarStyleHorizontal"
+    <LinearLayout
+        android:id="@+id/linearProgressBars"
         android:layout_width="0dp"
-        android:layout_height="20dp"
-        android:max="100"
-        android:progress="0"
-        android:visibility="gone"
-        android:progressDrawable="@drawable/progress_bar_green"
-        app:layout_constraintWidth_percent="0.33"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:layout_marginTop="16dp"
         app:layout_constraintTop_toBottomOf="@id/logo_image"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:layout_constraintEnd_toEndOf="parent">
+
+        <ProgressBar
+            android:id="@+id/progressBarRelaxed"
+            style="?android:attr/progressBarStyleHorizontal"
+            android:layout_gravity="center_horizontal"
+            android:layout_width="200dp"
+            android:layout_height="20dp"
+            android:max="100"
+            android:progress="0"
+            android:visibility="gone"
+            android:progressDrawable="@drawable/progress_bar_green"
+            android:layout_marginBottom="8dp" />
+
+        <ProgressBar
+            android:id="@+id/progressBarFlexed"
+            style="?android:attr/progressBarStyleHorizontal"
+            android:layout_gravity="center_horizontal"
+            android:layout_width="200dp"
+            android:layout_height="20dp"
+            android:max="100"
+            android:progress="0"
+            android:visibility="gone"
+            android:progressDrawable="@drawable/progress_bar_yellow"
+            android:layout_marginBottom="8dp" />
+
+        <ProgressBar
+            android:id="@+id/progressBarStrained"
+            style="?android:attr/progressBarStyleHorizontal"
+            android:layout_gravity="center_horizontal"
+            android:layout_width="200dp"
+            android:layout_height="20dp"
+            android:max="100"
+            android:progress="0"
+            android:visibility="gone"
+            android:progressDrawable="@drawable/progress_bar_red" />
+
+    </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
